crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_group_norm_config_8g_32c.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
GroupNormConfig {
    num_groups: 8,
    num_channels: 32,
    spatial_size: 64,
    eps: 1e-5,
    elementwise_affine: true,
}
