crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_kv_cache_initial_state.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: "format!(\"layers={}, seq_len_per_layer={:?}\", cache.blocks.len(),\ncache.blocks.iter().map(|b| b.seq_len).collect::<Vec<_>>())"
---
layers=2, seq_len_per_layer=[0, 0]
