crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_kv_dtype_element_bytes.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: sizes
---
[
    (
        "F32",
        4,
    ),
    (
        "F16",
        2,
    ),
    (
        "Bf16",
        2,
    ),
]
