crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_kv_dtype_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: variants
---
[
    F32,
    F16,
    Bf16,
]
