crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_layer_norm_config_hidden_768.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
LayerNormConfig {
    normalized_shape: [
        768,
    ],
    eps: 1e-5,
    elementwise_affine: true,
}
