crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_linear_config_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
LinearConfig {
    in_features: 1,
    out_features: 1,
    batch_size: 1,
    has_bias: false,
    tile_m: 32,
    tile_n: 32,
    tile_k: 32,
    threads_per_block: 256,
    shared_mem_bytes: 8192,
}
