crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_loss_reduction_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: variants
---
[
    None,
    Mean,
    Sum,
]
