crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_operation_category_display_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: display
---
[
    "Matrix Ops",
    "Norm Ops",
    "Activation Ops",
    "Position Encoding",
    "Quantized Ops",
    "Attention Ops",
]
