crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_pool_config_max.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
PoolConfig {
    pool_type: Max,
    kernel_size: 3,
    stride: 2,
    padding: 1,
    dilation: 1,
    ceil_mode: false,
}
